[package]
name = "moonfire-tflite"
version = "0.0.1"
authors = ["Scott Lamb <slamb@slamb.org>"]
readme = "README.md"
edition = "2018"
license = "Apache-2.0"

[features]
edgetpu = []

[dependencies]
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
libc = "0.2"
libloading = "0.8.6"

[build-dependencies]
cc = "1.0"
